# machikado.network

./: .gitignore  README.md
.github/workflows/: release_sakura.yml  release_sakura_test.yml  sakura_ci.yml  test_aptos.yml  test_scripts.yml
aptos/: Move.toml  read_module.py
aptos-cache/: package-lock.json  package.json  wrangler.toml
aptos-cache/src/: index.ts
aptos/public_key_token/: Makefile  Move.toml
aptos/public_key_token/sources/: PKToken.move  (+2 more)
aptos/sources/: Invite.move  MachikadoAccount.move  MachikadoNetwork.move
aptos/tests/: .gitignore  aptos.py  publish_token.py  test.js
machikado_network_frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.json
machikado_network_frontend/app/: root.tsx
machikado_network_frontend/components/: AptosHeader.tsx
machikado_network_frontend/hooks/: aptos.ts
machikado_network_frontend/lib/: aptos.ts
machikado_network_frontend/pages/: index.tsx
machikado_network_frontend/public/: _redirects
machikado_network_frontend_old/pages/: _app.tsx
sakura/: Cargo.toml  Cross.toml
sakura/src/: main.rs
sakura/src/aptos/: machikado.rs  mod.rs
sakura/src/setup/: mod.rs  tinc.rs
sakura/src/tinc/: mod.rs  setup.rs
sakura/src/tinc/setup/: mod.rs
sakura/src/tinc/update/: mod.rs
scripts/: install_sakura.sh
server/: install-tinc1.1.sh  setup.sh  setup_root.sh
tinc_node/: Dockerfile  README.md  Vagrantfile  docker-compose.yml  exchange_key_in_docker.sh  exchange_key_in_vagrant.sh  install-tinc1.1.sh  setup.sh  setup_gateway.sh  setup_node_with_sakura.sh  tinc-systemd.service
(+30 files in other folders)
