[package]
name = "sakura"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"

[dependencies.clap]
version = "3.2.16"
features = ["derive"]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
